--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.stormpath</groupId>
+        <groupId>com.stormpath.juiser</groupId>
         <artifactId>juiser-root</artifactId>
         <version>0.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -31,7 +31,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.stormpath</groupId>
+            <groupId>com.stormpath.juiser</groupId>
             <artifactId>juiser-core</artifactId>
         </dependency>
         <dependency>
