--- a/examples/spring-boot-security-example/pom.xml
+++ b/examples/spring-boot-security-example/pom.xml
@@ -35,13 +35,33 @@
             <artifactId>juiser-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <exclusions>
+                <exclusion>
+                    <!-- This dialect dependency has a Thymeleaf dependency older than Spring Boot's default: -->
+                    <groupId>nz.net.ultraq.thymeleaf</groupId>
+                    <artifactId>thymeleaf-layout-dialect</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>1.4.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.thymeleaf</groupId> <!-- Use Spring Boot's default version -->
+                    <artifactId>thymeleaf</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
         <!-- Runtime-only dependencies for the example: -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
