--- a/spring-boot-starter/pom.xml
+++ b/spring-boot-starter/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.stormpath.juiser</groupId>
             <artifactId>juiser-spring-security</artifactId>
             <!-- We need Jackson, but Spring Boot imports a newer version, so we exclude this one here: -->
@@ -43,6 +47,16 @@
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>jackson-databind</artifactId>
+                </exclusion>
+                <!-- This is included in spring-boot-starter-security above: -->
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-web</artifactId>
+                </exclusion>
+                <!-- This is included in spring-boot-starter-security above: -->
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-config</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
