--- a/spring-root/pom.xml
+++ b/spring-root/pom.xml
@@ -25,27 +25,15 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>juiser-spring-web</artifactId>
-    <name>Juiser :: Spring Web</name>
-    <packaging>jar</packaging>
+    <artifactId>juiser-spring-root</artifactId>
+    <name>Juiser :: Spring</name>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.juiser</groupId>
-            <artifactId>juiser-spring</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.juiser</groupId>
-            <artifactId>juiser-servlet</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>spring</module>
+        <module>spring-web</module>
+        <module>spring-security</module>
+        <module>spring-boot-starter</module>
+    </modules>
 
 </project>
