--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language: java
 jdk:
   - oraclejdk8
 
-install: mvn dependency:resolve
+install: mvn dependency:resolve -DexcludeGroupIds=org.juiser
 
 script: mvn install
