--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>io.spring.platform</groupId>
+                <artifactId>platform-bom</artifactId>
+                <version>Brussels-SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.juiser</groupId>
                 <artifactId>juiser-core</artifactId>
                 <version>${project.version}</version>
