--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (C) 2017 Stormpath, Inc.
+  ~ Copyright 2017 Les Hazlewood and the respective Juiser contributors
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -31,6 +31,10 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <prerequisites>
+        <maven>3.0</maven>
+    </prerequisites>
 
     <scm>
         <connection>scm:git:https://github.com/juiser/juiser.git</connection>
@@ -64,22 +68,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <maven.jar.version>3.0.2</maven.jar.version>
-        <maven.compiler.version>3.5.1</maven.compiler.version>
+        <maven.compiler.version>3.6.1</maven.compiler.version>
 
         <bouncycastle.version>1.56</bouncycastle.version>
         <jjwt.version>0.7.0</jjwt.version>
         <servlet.version>3.1.0</servlet.version>
-        <slf4j.version>1.7.21</slf4j.version>
-        <spring.version>4.3.6.RELEASE</spring.version>
-        <spring.boot.version>1.5.0.RELEASE</spring.boot.version>
-        <spring.security.version>4.2.1.RELEASE</spring.security.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <spring.version>4.3.8.RELEASE</spring.version>
+        <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
+        <spring.security.version>4.2.2.RELEASE</spring.security.version>
 
         <!-- Test dependencies: -->
-        <groovy.version>2.4.7</groovy.version>
-        <logback.version>1.1.7</logback.version>
+        <groovy.version>2.4.10</groovy.version>
+        <logback.version>1.2.3</logback.version>
         <easymock.version>3.4</easymock.version>
         <junit.version>4.12</junit.version>
-        <powermock.version>1.6.5</powermock.version>
+        <powermock.version>1.6.6</powermock.version>
         <failsafe.plugin.version>2.19.1</failsafe.plugin.version>
     </properties>
 
@@ -192,6 +196,28 @@
                         <artifactId>commons-logging</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <!-- Spring Security uses older versions of Spring, force upgrade to latest -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
             </dependency>
 
             <!-- Test Dependencies: Only required for testing when building.  Not required by users at runtime: -->
