--- a/pom.xml
+++ b/pom.xml
@@ -32,16 +32,13 @@
         </license>
     </licenses>
 
-    <prerequisites>
-        <maven>3.0</maven>
-    </prerequisites>
-
     <scm>
         <connection>scm:git:https://github.com/juiser/juiser.git</connection>
         <developerConnection>scm:git:git@github.com:juiser/juiser.git</developerConnection>
         <url>git@github.com:juiser/juiser.git</url>
         <tag>HEAD</tag>
     </scm>
+
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/juiser/juiser/issues</url>
@@ -50,6 +47,7 @@
         <system>TravisCI</system>
         <url>https://travis-ci.org/juiser/juiser</url>
     </ciManagement>
+
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -62,6 +60,7 @@
     </distributionManagement>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
         <!-- Turn off JDK 8's lint checks: -->
         <additionalparam>-Xdoclint:none</additionalparam>
@@ -83,6 +82,7 @@
         <logback.version>1.2.3</logback.version>
         <easymock.version>3.4</easymock.version>
         <junit.version>4.12</junit.version>
+        <objenesis.version>2.4</objenesis.version>
         <powermock.version>1.6.6</powermock.version>
         <failsafe.plugin.version>2.19.1</failsafe.plugin.version>
     </properties>
@@ -244,6 +244,12 @@
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
                 <version>${easymock.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.objenesis</groupId>
+                <artifactId>objenesis</artifactId>
+                <version>${objenesis.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
