--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (C) 2017 Stormpath, Inc.
+  ~ Copyright 2017 Les Hazlewood and the respective Juiser contributors
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -38,6 +38,7 @@
         <url>git@github.com:juiser/juiser.git</url>
         <tag>HEAD</tag>
     </scm>
+
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/juiser/juiser/issues</url>
@@ -46,6 +47,7 @@
         <system>TravisCI</system>
         <url>https://travis-ci.org/juiser/juiser</url>
     </ciManagement>
+
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -58,28 +60,30 @@
     </distributionManagement>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
         <!-- Turn off JDK 8's lint checks: -->
         <additionalparam>-Xdoclint:none</additionalparam>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <maven.jar.version>3.0.2</maven.jar.version>
-        <maven.compiler.version>3.5.1</maven.compiler.version>
+        <maven.compiler.version>3.6.1</maven.compiler.version>
 
         <bouncycastle.version>1.56</bouncycastle.version>
         <jjwt.version>0.7.0</jjwt.version>
         <servlet.version>3.1.0</servlet.version>
-        <slf4j.version>1.7.21</slf4j.version>
-        <spring.version>4.3.6.RELEASE</spring.version>
-        <spring.boot.version>1.5.0.RELEASE</spring.boot.version>
-        <spring.security.version>4.2.1.RELEASE</spring.security.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <spring.version>4.3.8.RELEASE</spring.version>
+        <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
+        <spring.security.version>4.2.2.RELEASE</spring.security.version>
 
         <!-- Test dependencies: -->
-        <groovy.version>2.4.7</groovy.version>
-        <logback.version>1.1.7</logback.version>
+        <groovy.version>2.4.10</groovy.version>
+        <logback.version>1.2.3</logback.version>
         <easymock.version>3.4</easymock.version>
         <junit.version>4.12</junit.version>
-        <powermock.version>1.6.5</powermock.version>
+        <objenesis.version>2.4</objenesis.version>
+        <powermock.version>1.6.6</powermock.version>
         <failsafe.plugin.version>2.19.1</failsafe.plugin.version>
     </properties>
 
@@ -201,6 +205,28 @@
                 </exclusions>
             </dependency>
 
+            <!-- Spring Security uses older versions of Spring, force upgrade to latest -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
             <!-- Test Dependencies: Only required for testing when building.  Not required by users at runtime: -->
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -225,6 +251,12 @@
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
                 <version>${easymock.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.objenesis</groupId>
+                <artifactId>objenesis</artifactId>
+                <version>${objenesis.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
