--- a/spring/spring-core/pom.xml
+++ b/spring/spring-core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.juiser</groupId>
         <artifactId>juiser-root</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
